New Activity Overview design

--- a/geppetto/Views/Storyboards/Search/ActivityCardCell.xib
+++ b/geppetto/Views/Storyboards/Search/ActivityCardCell.xib
@@ -26,7 +26,7 @@
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                 <real key="value" value="16"/>
                             </userDefinedRuntimeAttribute>
-                            <userDefinedRuntimeAttribute type="color" keyPath="gradientColor">
+                            <userDefinedRuntimeAttribute type="color" keyPath="bottomGradientColor">
                                 <color key="value" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
