--- a/geppetto/Views/Storyboards/Profile/FullscreenImage.storyboard
+++ b/geppetto/Views/Storyboards/Profile/FullscreenImage.storyboard
@@ -68,21 +68,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Pbd-db-Zcj">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rCw-iI-BBM">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="gq4-Hh-8Ws"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="gq4-Hh-8Ws" firstAttribute="bottom" secondItem="Pbd-db-Zcj" secondAttribute="bottom" id="1BP-Sa-fCt"/>
-                            <constraint firstItem="Pbd-db-Zcj" firstAttribute="top" secondItem="gq4-Hh-8Ws" secondAttribute="top" id="7wr-6b-bII"/>
-                            <constraint firstItem="Pbd-db-Zcj" firstAttribute="leading" secondItem="gq4-Hh-8Ws" secondAttribute="leading" id="UkQ-8q-ckg"/>
-                            <constraint firstItem="Pbd-db-Zcj" firstAttribute="trailing" secondItem="gq4-Hh-8Ws" secondAttribute="trailing" id="lhf-ms-jgh"/>
+                            <constraint firstItem="gq4-Hh-8Ws" firstAttribute="bottom" secondItem="rCw-iI-BBM" secondAttribute="bottom" id="6gj-Fc-hPS"/>
+                            <constraint firstItem="rCw-iI-BBM" firstAttribute="leading" secondItem="gq4-Hh-8Ws" secondAttribute="leading" id="YDU-wh-gZ1"/>
+                            <constraint firstItem="gq4-Hh-8Ws" firstAttribute="trailing" secondItem="rCw-iI-BBM" secondAttribute="trailing" id="e7N-S2-sy9"/>
+                            <constraint firstItem="rCw-iI-BBM" firstAttribute="top" secondItem="gq4-Hh-8Ws" secondAttribute="top" id="sWe-S3-KwF"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="imageView" destination="Pbd-db-Zcj" id="QaJ-YY-jFp"/>
+                        <outlet property="imageView" destination="rCw-iI-BBM" id="UPQ-cZ-QPd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="45e-Md-osl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
