Add scroll to step screen and set image aspect ratio to 4:3

--- a/geppetto/Views/Storyboards/Activities/ActivityStep.storyboard
+++ b/geppetto/Views/Storyboards/Activities/ActivityStep.storyboard
@@ -28,66 +28,80 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="OhK-h6-JGe">
-                                <rect key="frame" x="0.0" y="44" width="414" height="400"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lUU-cB-fgX">
+                                <rect key="frame" x="0.0" y="44" width="414" height="786"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jiq-as-X68">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="256"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="OhK-h6-JGe">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="454.5"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jiq-as-X68">
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="310.5"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="jiq-as-X68" secondAttribute="height" multiplier="4:3" id="HaW-CF-juw"/>
+                                                </constraints>
+                                            </imageView>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="mQ4-5i-ZBr" userLabel="Main Info">
+                                                <rect key="frame" x="16" y="326.5" width="382" height="48"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Step Index" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m1K-Cs-laX">
+                                                        <rect key="frame" x="0.0" y="0.0" width="90" height="23"/>
+                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Owt-NS-DQT">
+                                                        <rect key="frame" x="0.0" y="31" width="72.5" height="17"/>
+                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                            </stackView>
+                                            <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Cul-IZ-Ops">
+                                                <rect key="frame" x="16" y="390.5" width="382" height="64"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Diquinha da Juntu" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Xy-l5-d1M">
+                                                        <rect key="frame" x="0.0" y="8" width="153" height="23"/>
+                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="juntuTipText" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QGe-Vv-hhh">
+                                                        <rect key="frame" x="0.0" y="39" width="77.5" height="17"/>
+                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                                <directionalEdgeInsets key="directionalLayoutMargins" top="8" leading="0.0" bottom="8" trailing="8"/>
+                                            </stackView>
+                                        </subviews>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="256" id="Jew-es-EqZ"/>
+                                            <constraint firstItem="mQ4-5i-ZBr" firstAttribute="leading" secondItem="OhK-h6-JGe" secondAttribute="leading" constant="16" id="AmR-lj-zjy"/>
+                                            <constraint firstAttribute="trailing" secondItem="mQ4-5i-ZBr" secondAttribute="trailing" constant="16" id="N3h-vi-URn"/>
+                                            <constraint firstItem="Cul-IZ-Ops" firstAttribute="leading" secondItem="OhK-h6-JGe" secondAttribute="leading" constant="16" id="Qky-G4-clH"/>
+                                            <constraint firstAttribute="trailing" secondItem="Cul-IZ-Ops" secondAttribute="trailing" constant="16" id="kqT-CH-Qkh"/>
                                         </constraints>
-                                    </imageView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="mQ4-5i-ZBr" userLabel="Main Info">
-                                        <rect key="frame" x="16" y="272" width="382" height="48"/>
-                                        <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Step Index" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m1K-Cs-laX">
-                                                <rect key="frame" x="0.0" y="0.0" width="90" height="23"/>
-                                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Owt-NS-DQT">
-                                                <rect key="frame" x="0.0" y="31" width="72.5" height="17"/>
-                                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                        </subviews>
-                                    </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Cul-IZ-Ops">
-                                        <rect key="frame" x="16" y="336" width="382" height="64"/>
-                                        <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Diquinha da Juntu" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Xy-l5-d1M">
-                                                <rect key="frame" x="0.0" y="8" width="153" height="23"/>
-                                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="juntuTipText" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QGe-Vv-hhh">
-                                                <rect key="frame" x="0.0" y="39" width="77.5" height="17"/>
-                                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                        </subviews>
-                                        <directionalEdgeInsets key="directionalLayoutMargins" top="8" leading="0.0" bottom="8" trailing="8"/>
                                     </stackView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="mQ4-5i-ZBr" firstAttribute="leading" secondItem="OhK-h6-JGe" secondAttribute="leading" constant="16" id="AmR-lj-zjy"/>
-                                    <constraint firstAttribute="trailing" secondItem="mQ4-5i-ZBr" secondAttribute="trailing" constant="16" id="N3h-vi-URn"/>
-                                    <constraint firstItem="Cul-IZ-Ops" firstAttribute="leading" secondItem="OhK-h6-JGe" secondAttribute="leading" constant="16" id="Qky-G4-clH"/>
-                                    <constraint firstAttribute="trailing" secondItem="Cul-IZ-Ops" secondAttribute="trailing" constant="16" id="kqT-CH-Qkh"/>
+                                    <constraint firstItem="EeP-f5-Gnh" firstAttribute="top" secondItem="OhK-h6-JGe" secondAttribute="top" id="37q-DH-8Dh"/>
+                                    <constraint firstItem="EeP-f5-Gnh" firstAttribute="leading" secondItem="OhK-h6-JGe" secondAttribute="leading" id="9UP-F2-8xs"/>
+                                    <constraint firstItem="goK-Gk-kOs" firstAttribute="width" secondItem="OhK-h6-JGe" secondAttribute="width" id="PFU-4V-7Vv"/>
+                                    <constraint firstItem="OhK-h6-JGe" firstAttribute="bottom" secondItem="EeP-f5-Gnh" secondAttribute="bottom" id="men-q3-iti"/>
+                                    <constraint firstItem="OhK-h6-JGe" firstAttribute="trailing" secondItem="EeP-f5-Gnh" secondAttribute="trailing" id="yp7-Mn-S4c"/>
                                 </constraints>
-                            </stackView>
+                                <viewLayoutGuide key="contentLayoutGuide" id="EeP-f5-Gnh"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="goK-Gk-kOs"/>
+                            </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="8FI-3E-imV"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="OhK-h6-JGe" firstAttribute="trailing" secondItem="8FI-3E-imV" secondAttribute="trailing" id="3lP-J4-jOw"/>
-                            <constraint firstItem="OhK-h6-JGe" firstAttribute="centerX" secondItem="36T-Um-fAm" secondAttribute="centerX" id="W4w-16-o37"/>
-                            <constraint firstItem="OhK-h6-JGe" firstAttribute="leading" secondItem="8FI-3E-imV" secondAttribute="leading" id="rRT-Eg-hdB"/>
-                            <constraint firstItem="OhK-h6-JGe" firstAttribute="top" secondItem="8FI-3E-imV" secondAttribute="top" id="s3b-2L-cS0"/>
+                            <constraint firstItem="8FI-3E-imV" firstAttribute="bottom" secondItem="lUU-cB-fgX" secondAttribute="bottom" constant="32" id="1Eo-bl-CHV"/>
+                            <constraint firstItem="lUU-cB-fgX" firstAttribute="leading" secondItem="8FI-3E-imV" secondAttribute="leading" id="3Cy-ao-u3W"/>
+                            <constraint firstItem="8FI-3E-imV" firstAttribute="trailing" secondItem="lUU-cB-fgX" secondAttribute="trailing" id="I3F-Oe-BCm"/>
+                            <constraint firstItem="lUU-cB-fgX" firstAttribute="top" secondItem="8FI-3E-imV" secondAttribute="top" id="sPi-vh-SXR"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="alH-Tg-Xlo"/>
@@ -101,12 +115,11 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dop-A8-zXl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3096" y="119"/>
+            <point key="canvasLocation" x="3095.6521739130435" y="118.52678571428571"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="s8T-bq-ckx">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="bv9-GB-1Nc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <navigationController id="BVR-9r-fGK" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="tVw-o9-MDS">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -116,6 +129,7 @@
                         <segue destination="fej-cz-GZT" kind="relationship" relationship="rootViewController" id="SY1-ao-EZF"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bv9-GB-1Nc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="548" y="119"/>
         </scene>
